src/test/ui/resolve/issue-23305.stderr
error[E0391]: cycle detected when processing `<impl at $DIR/issue-23305.rs:5:1: 5:24>`
  --> $DIR/issue-23305.rs:5:16
   |
LL | impl dyn ToNbt<Self> {}
   |                ^^^^
   |
   = note: ...which again requires processing `<impl at $DIR/issue-23305.rs:5:1: 5:24>`, completing the cycle
note: cycle used when collecting item types in top-level module
  --> $DIR/issue-23305.rs:1:1
   |
LL | pub trait ToNbt<T> {
   | ^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
